<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_message">Hey friend!\n\nIf you find this app helpful, consider rating/reviewing it to show your support. I read all of your reviews and greatly appreciate any feedback!\n\n- Quantum Knight</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="rate_dialog_ok">Rate It!</string>
    <string name="rate_dialog_title">Rate Town of Salem Assistant!</string>
    <string name="Alignments">Alignments</string>
    <string name="Amnesiac">Amnesiac</string>
    <string name="Any">Any</string>
    <string name="Doctor">Doctor</string>
    <string name="GF">Godfather</string>
    <string name="Jailor">Jailor</string>
    <string name="MD">Mafia Deception</string>
    <string name="MK">Mafia Killing</string>
    <string name="MS">Mafia Support</string>
    <string name="Maf">Mafioso</string>
    <string name="Mafia">Mafia</string>
    <string name="Mayor">Mayor</string>
    <string name="NB">Neutral Benign</string>
    <string name="NE">Neutral Evil</string>
    <string name="NK">Neutral Killing</string>
    <string name="Present">Present</string>
    <string name="RM">Random Mafia</string>
    <string name="RN">Random Neutral</string>
    <string name="RT">Random Town</string>
    <string name="Roles">Roles</string>
    <string name="SerialKiller">Serial Killer</string>
    <string name="Spy">Spy</string>
    <string name="TI">Town Investigative</string>
    <string name="TK">Town Killing</string>
    <string name="TP">Town Protective</string>
    <string name="TS">Town Support</string>
    <string name="Townie">Townie</string>
    <string name="Vampire">Vampire</string>
    <string name="VampireHunter">Vampire Hunter</string>
    <string name="Veteran">Veteran</string>
    <string name="Witch">Witch</string>
    <string name="abilities">Abilities</string>
    <string name="abilitiesTitle">Abilities:</string>
    <string name="aboutTitle">About</string>
    <string name="app_name">Town of Salem Assistant</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arsonist">Arsonist</string>
    <string name="attributes">Attributes</string>
    <string name="attributesTitle">Attributes:</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="categories">Categories</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="current_position">Current Position:</string>
    <string name="custom_mode">Custom Mode</string>
    <string name="devDescriptionText">I enjoy Town of Salem just like you, so I love to contribute positively to the community. Whenever possible, I work on updating this app to help improve the user experience and implement new features. I read all of your reviews and try to respond in a timely manner, so I would greatly appreciate any feedback from you! And in game, my username is QuantKnight, and I play as Quantum Knight, so feel free to add me or say hi!</string>
    <string name="escort">Escort</string>
    <string name="exe">Executioner</string>
    <string name="forger">Forger</string>
    <string name="framer">Framer</string>
    <string name="goalTitle">Goal:</string>
    <string name="goals">Goals</string>
    <string name="helper">Helper</string>
    <string name="helper_lady">Helper</string>
    <string name="instructions">Instructions:\n</string>
    <string name="instructions_text">• Select a setup of your choice (all setups are empty if you haven\'t used them before)\n\n• Setups are automatically saved upon leaving custom mode\n\n• You can change the name of the setups by clicking on them\n\n• The delete button resets the corresponding setup\n\n• To confirm a role in custom mode, you must hold (long press) the corresponding category\n\n• Custom Mode rules are not enforced, so be sure to follow the in-game setup!</string>
    <string name="investResults">Invest Results</string>
    <string name="investResultsTitle">Investigation Results:</string>
    <string name="investigator">Investigator</string>
    <string name="jester">Jester</string>
    <string name="lookout">Lookout</string>
    <string name="mechanics">Mechanics:</string>
    <string name="medium">Medium</string>
    <string name="patch">Patch 2.0.0</string>
    <string name="player_names">Player Names</string>
    <string name="position">Position</string>
    <string name="positionTitle">#</string>
    <string name="present">Present</string>
    <string name="rainbow_mode">Rainbow Mode</string>
    <string name="ranked_button">Ranked Mode</string>
    <string name="role_attribute">Role Attribute</string>
    <string name="select">&lt; Select &gt;</string>
    <string name="select_">Select</string>
    <string name="select_category">Select Category</string>
    <string name="select_setup">Select a setup:</string>
    <string name="setup_1">Setup 1</string>
    <string name="setup_2">Setup 2</string>
    <string name="setup_3">Setup 3</string>
    <string name="setup_4">Setup 4</string>
    <string name="setup_5">Setup 5</string>
    <string name="sheriff">Sheriff</string>
    <string name="summary">Summary</string>
    <string name="summaryTitle">Summary:</string>
    <string name="survivor">Survivor</string>
    <string name="taken">Taken</string>
    <string name="the_dev">The Developer:</string>
    <string name="thisAppText">This is a fan-made app dedicated to assist fellow townies in-game as well as serve as a reference manual. It features an intuitive role tracker for ranked, classic, rainbow, and custom modes that helps make it easier for players to determine the remaining roles, which can be useful for any role in the game! The reference provided is very useful for dealing with meta-gaming jailors (you know who you are =P) as well as for increasing your general game knowledge. Future updates will include a role tracker for other game modes, additional reference material such as strategies and achievements, and changes according to new patches. Don\'t forget to leave a review to let me know what you\'d like to see next! From one townie to another, thank you for downloading this app =).</string>
    <string name="this_app">This App:</string>
    <string name="tips">Tips</string>
    <string name="tipsText">• Tap the corresponding alignment in Ranked Mode to confirm a player\'s position or role.\n\n• In Ranked and Custom Mode, fill out the player names in the overview tab on Night 1 for your convenience.\n\n• You can use the Ranked role tracker in the Ranked Practice Mode as well!\n\n• The role tracker will let you know if you attempt to duplicate a unique role =P\n\n• Don\'t leave a game mode unless you are done with the game, it will be reset upon leaving!\n\n• Be sure to put in your own role!\n\n• The info tab contains a list of all investigative results for Sheriff and Investigator in their respective pages.\n\n• Even if you are an evil role, keep track of the remaining alignments to determine what roles you can claim.\n\n• Got Vampires? Be careful of those you\'ve already assumed to be town!</string>
    <string name="tipsTitle">Tips</string>
    <string name="town_of_salem">Town of Salem</string>
    <string name="version">V 9012</string>
    <string name="x2">(x2)</string>
    <string name="salem_classic">Salem Classic</string>
    <string name="coven_modes">Coven Modes</string>
    <string name="ranked_practice_button">Ranked Practice</string>
    <string name="CL">Coven Leader</string>
    <string name="Medusa">Medusa</string>
    <string name="CE">Coven Evil</string>
    <string name="Psychic">Psychic</string>
    <string name="PM">Potion Master</string>
    <string name="RC">Random Coven</string>
    <string name="Plaguebearer">Plaguebearer</string>
    <string name="Pirate">Pirate</string>
    <string name="NC">Neutral Chaos</string>
</resources>
