<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/salem_classic"
        android:src="@drawable/classic_modes_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/buttonRanked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ranked_button"
            android:onClick="goToRanked"
            android:src="@drawable/button_ranked" />

        <ImageView
            android:id="@+id/buttonClassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/classic_mode"
            android:onClick="goToClassic"
            android:src="@drawable/button_classic" />

        <ImageView
            android:id="@+id/buttonRainbow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/rainbow_mode"
            android:onClick="goToRainbow"
            android:src="@drawable/button_rainbow" />

        <ImageView
            android:id="@+id/buttonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/custom_mode"
            android:onClick="goToCustom"
            android:src="@drawable/button_custom" />

    </LinearLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/GF"
        android:scaleType="fitXY"
        android:src="@drawable/godfather" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/Townie"
        android:scaleType="fitXY"
        android:src="@drawable/town2" />
</RelativeLayout>